--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container p-5">
- <h1>Compie Test Angular 5</h1>
+ <h1 class="text-center">Compie Test Angular 5</h1>
   <!--Start-->
   <app-googlemap></app-googlemap>
   <!--End-->
