--- a/src/app/googlemap/googlemap.component.html
+++ b/src/app/googlemap/googlemap.component.html
@@ -1,5 +1,7 @@
 <ng4geo-autocomplete [userSettings]="userSettings" (componentCallback)="autoCompleteCallback1($event)"></ng4geo-autocomplete>
 
+<!-- <div>Walmart has the best branches distribution in your area</div> -->
+
 <table class="table">
   <thead>
     <tr>
